classDiagram
Account <|-- Admin
Account <|-- User

Account : #String name
Account : #String surname
Account : #String email
Account : #String password
Account : #list status

class Admin{
    -bool permission
}

class User{
    - String country
    - int mobile
    - String user_id
    - list user_data_list
    + ValidateUser()
}